fixed collapsing issue with nav menu

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -45,6 +45,7 @@ header nav {
     float: right;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
+    flex-wrap: wrap;
 }
 
 /* Hover changes color on navigation menu */
@@ -254,4 +255,14 @@ footer ul {
     justify-content: space-evenly;
     align-content: center;
     font-size: 20px;
+}
+
+/* Media Query For Larger Screens Like Desktop */
+@media screen and (max-width:980px) {
+    
+}
+
+/* Media Query for Smaller Screens Like Phones and Tablets */
+@media screen and (max-width:768px) {
+    
 }
